[metadata]
name = ftp-loader
version = 0.2
author = Roman Rodionov
description = A package to download project data files from FTP
long_description = file: README.md
long_description_type = text/markdown
url = https://github.com/rorni/ftp-loader
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = ftp_loader
install_requires = 
    pysftp >= 0.2.9
    tomlkit >= 0.6.0
python_requires = >= 3.5

[options.entry_points]
console_scripts = 
    ftp-loader = ftp_loader:main